fixed overflow issue for mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,7 +35,7 @@ header {
 }
 
 .current-weather {
-  border: 1px solid black;
+  /* border: 1px solid black; */
   margin: 20px;
 }
 
